# kompier

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cppm
design/: README.md  main.kk  math.kk
design/spec/: README.md  definite-assignment.md  generics-and-constraints.md  grammar.md  lexical.md  modules.md  scopes-and-decls.md  traits-and-interfaces.md  types-and-inference.md
